# WordleAgents

./: Makefile.am  README.md  WordleAgents.sln  buildall  configure.ac  wordlist.csv  wordlist5.json
.github/workflows/: codeql-analysis.yml
LATEST_RELEASE_BIN/: ManualChallenge.bat  RunAgent.bat  RunChallenge.bat  WaitForFile.bat  wordlist5.csv
LastLine/: LastLine.vcxproj  LastLine.vcxproj.filters
LastLine/Source/: LastLine.cpp
PickWords/: Makefile.am  PickWords.cpp  PickWords.vcxproj  PickWords.vcxproj.filters
PickWords/Source/: Makefile.am  PickWords.cpp  framework.h
PlayWordle/: PlayWordle.vcxproj  PlayWordle.vcxproj.filters  wordlist5.csv
PlayWordle/Source/: Makefile.am  PlayWordle.cpp  framework.h
RandomAgent/: RandomAgent.vcxproj  RandomAgent.vcxproj.filters
RandomAgent/Source/: Makefile.am  MyAgent.cpp  MyAgent.h  MyAgentFactory.h  dllmain.cpp  framework.h
WordleAgent/: Game.cpp  Makefile.am  WordleAgent.vcxproj  WordleAgent.vcxproj.filters
WordleAgent/Include/WordleAgent/: Agent.h  AgentFactory.h  AgentFactoryDll.h  CsvReader.h  Game.h  OutputHelper.h  Random.h  Timer.h  framework.h
WordleAgent/Source/: AgentFactoryDll.cpp  CsvReader.cpp  Game.cpp  Makefile.am  OutputHelper.cpp  Random.cpp  Timer.cpp
